After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 721987 - unbreak browser plugin (fix type)
unbreak browser plugin (fix type)
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Browser plugin (obsolete)
3.10.x
Other OpenBSD
: Normal normal
: ---
Assigned To: totem-browser-maint
totem-browser-maint
Depends on:
Blocks:
 
 
Reported: 2014-01-11 12:43 UTC by Antoine Jacoutot
Modified: 2014-01-11 14:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
use correct type for SetTime (690 bytes, patch)
2014-01-11 12:43 UTC, Antoine Jacoutot
accepted-commit_now Details | Review

Description Antoine Jacoutot 2014-01-11 12:43:31 UTC
Created attachment 265998 [details] [review]
use correct type for SetTime

Hi.

The totem browser plugin does not build on OpenBSD:

totemPlugin.cpp:306: error: prototype for 'void totemPlugin::SetTime(guint64)' does not match any in class 'totemPlugin'
totemPlugin.h:409: error: candidate is: void totemPlugin::SetTime(uint64_t)

The following diff fixes.
Alright to push?
Comment 1 Philip Withnall 2014-01-11 14:02:04 UTC
Review of attachment 265998 [details] [review]:

Looks good to me. I didn’t realise guint64 is actually typedeffed in a platform-specific way (on 64-bit platforms, typedeffed to unsigned long). I had always assumed it was typedeffed to uint64_t. Thanks for the patch.
Comment 2 Antoine Jacoutot 2014-01-11 14:07:43 UTC
(In reply to comment #1)
> Review of attachment 265998 [details] [review]:
> 
> Looks good to me. I didn’t realise guint64 is actually typedeffed in a
> platform-specific way (on 64-bit platforms, typedeffed to unsigned long). I had
> always assumed it was typedeffed to uint64_t. Thanks for the patch.

Thank you Philip. It's in b50fa143.