browser-plugin: use correct type for SetTime.

https://bugzilla.gnome.org/show_bug.cgi?id=721987